fix for sbt 1.9